--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "axios": "^1.4.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
